[package]
name = "pr0dl"
version = "0.1.0"
edition = "2021"
description = "A CLI downloader for pr0gramm.com"

[[bin]]
name = "pr0dl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
indicatif = { version = "0.17", features = ["tokio"] }
futures = "0.3"
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
